// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarm Renders \`alarm\` widget settings with all rights 1`] = `
<div>
  <div
    class="v-list pt-0 theme--light"
    role="list"
  >
    <field-title-stub
      title="common.title"
      value=""
    />
    <hr
      class="v-divider theme--light"
    />
    <field-periodic-refresh-stub
      value="[object Object]"
    />
    <hr
      class="v-divider theme--light"
    />
    <div
      class="v-list__group"
    >
      <div
        class="v-list__group__header"
      >
        <div
          role="listitem"
        >
          <div
            class="v-list__tile theme--light"
          >
            settings.advancedSettings
          </div>
        </div>
        <div
          class="v-list__group__header__append-icon"
        >
          <i
            aria-hidden="true"
            class="v-icon material-icons theme--light"
          >
            keyboard_arrow_down
          </i>
        </div>
      </div>
      <transition-stub
        mode="in-out"
        name="expand-transition"
      >
        <div
          class="v-list__group__items"
          style="display: none;"
        >
          <div
            class="v-list grey lighten-4 px-2 py-0 theme--light"
            role="list"
          >
            <field-default-sort-column-stub
              columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
              columnslabel="settings.columnName"
              value="[object Object]"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-columns-stub
              columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
              label="settings.columnNames"
              withcolorindicator="true"
              withhtml="true"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-columns-stub
              columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
              label="settings.groupColumnNames"
              withcolorindicator="true"
              withhtml="true"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-columns-stub
              columns="[object Object],[object Object]"
              label="settings.trackColumnNames"
              withcolorindicator="true"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-default-elements-per-page-stub
              value="13"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-opened-resolved-filter-stub
              value="true"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-filters-stub
              addable="true"
              condition="$and"
              editable="true"
              entitiestype="alarm"
              filters=""
            />
            <hr
              class="v-divider theme--light"
            />
            <field-remediation-instructions-filters-stub
              addable="true"
              editable="true"
              filters=""
            />
            <hr
              class="v-divider theme--light"
            />
            <field-live-reporting-stub
              value="[object Object]"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-info-popup-stub
              columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
              popups=""
            />
            <hr
              class="v-divider theme--light"
            />
            <field-text-editor-stub
              title="settings.moreInfosModal"
              value=""
            />
            <hr
              class="v-divider theme--light"
            />
            <field-grid-range-size-stub
              max="12"
              min="0"
              step="1"
              title="settings.expandGridRangeSize"
              value="0,12"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-switcher-stub
              title="settings.isHtmlEnabledOnTimeLine"
            />
            <hr
              class="v-divider theme--light"
            />
            <div
              class="v-list__group"
            >
              <div
                class="v-list__group__header"
              >
                <div
                  role="listitem"
                >
                  <div
                    class="v-list__tile theme--light"
                  >
                    Ack
                  </div>
                </div>
                <div
                  class="v-list__group__header__append-icon"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                  >
                    keyboard_arrow_down
                  </i>
                </div>
              </div>
              <transition-stub
                mode="in-out"
                name="expand-transition"
              >
                <div
                  class="v-list__group__items"
                  style="display: none;"
                >
                  <div
                    class="v-list grey lighten-4 px-2 py-0 theme--light"
                    role="list"
                  />
                  <field-switcher-stub
                    title="settings.isAckNoteRequired"
                  />
                  <hr
                    class="v-divider theme--light"
                  />
                  <field-switcher-stub
                    title="settings.isMultiAckEnabled"
                  />
                  <hr
                    class="v-divider theme--light"
                  />
                  <field-fast-ack-output-stub
                    value="[object Object]"
                  />
                </div>
              </transition-stub>
            </div>
            <hr
              class="v-divider theme--light"
            />
            <field-switcher-stub
              title="settings.isSnoozeNoteRequired"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-enabled-limit-stub
              label="settings.linksCategoriesLimit"
              title="settings.linksCategoriesAsList"
              value="[object Object]"
            />
            <hr
              class="v-divider theme--light"
            />
            <export-csv-form-stub
              datetimeformat="true"
              form="[object Object]"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-switcher-stub
              title="settings.stickyHeader"
            />
          </div>
        </div>
      </transition-stub>
    </div>
    <hr
      class="v-divider theme--light"
    />
  </div>
  <button
    class="primary v-btn theme--light"
    type="button"
  >
    <div
      class="v-btn__content"
    >
      common.save
    </div>
  </button>
</div>
`;

exports[`alarm Renders \`alarm\` widget settings with custom props 1`] = `
<div>
  <div
    class="v-list pt-0 theme--light"
    role="list"
  >
    <field-title-stub
      title="common.title"
      value="Alarms list"
    />
    <hr
      class="v-divider theme--light"
    />
    <field-periodic-refresh-stub
      value="[object Object]"
    />
    <hr
      class="v-divider theme--light"
    />
    <div
      class="v-list__group"
    >
      <div
        class="v-list__group__header"
      >
        <div
          role="listitem"
        >
          <div
            class="v-list__tile theme--light"
          >
            settings.advancedSettings
          </div>
        </div>
        <div
          class="v-list__group__header__append-icon"
        >
          <i
            aria-hidden="true"
            class="v-icon material-icons theme--light"
          >
            keyboard_arrow_down
          </i>
        </div>
      </div>
      <transition-stub
        mode="in-out"
        name="expand-transition"
      >
        <div
          class="v-list__group__items"
          style="display: none;"
        >
          <div
            class="v-list grey lighten-4 px-2 py-0 theme--light"
            role="list"
          >
            <field-default-sort-column-stub
              columns="[object Object]"
              columnslabel="settings.columnName"
              value="[object Object]"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-columns-stub
              columns="[object Object]"
              label="settings.columnNames"
              withcolorindicator="true"
              withhtml="true"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-columns-stub
              columns="[object Object]"
              label="settings.groupColumnNames"
              withcolorindicator="true"
              withhtml="true"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-columns-stub
              columns="[object Object]"
              label="settings.trackColumnNames"
              withcolorindicator="true"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-default-elements-per-page-stub
              value="13"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-opened-resolved-filter-stub
              value="true"
            />
            <hr
              class="v-divider theme--light"
            />
            <!---->
            <!---->
            <field-live-reporting-stub
              value="[object Object]"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-info-popup-stub
              columns="[object Object]"
              popups=""
            />
            <hr
              class="v-divider theme--light"
            />
            <field-text-editor-stub
              title="settings.moreInfosModal"
              value="More info template"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-grid-range-size-stub
              max="12"
              min="0"
              step="1"
              title="settings.expandGridRangeSize"
              value="1,11"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-switcher-stub
              title="settings.isHtmlEnabledOnTimeLine"
              value="true"
            />
            <hr
              class="v-divider theme--light"
            />
            <div
              class="v-list__group"
            >
              <div
                class="v-list__group__header"
              >
                <div
                  role="listitem"
                >
                  <div
                    class="v-list__tile theme--light"
                  >
                    Ack
                  </div>
                </div>
                <div
                  class="v-list__group__header__append-icon"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                  >
                    keyboard_arrow_down
                  </i>
                </div>
              </div>
              <transition-stub
                mode="in-out"
                name="expand-transition"
              >
                <div
                  class="v-list__group__items"
                  style="display: none;"
                >
                  <div
                    class="v-list grey lighten-4 px-2 py-0 theme--light"
                    role="list"
                  />
                  <field-switcher-stub
                    title="settings.isAckNoteRequired"
                    value="true"
                  />
                  <hr
                    class="v-divider theme--light"
                  />
                  <field-switcher-stub
                    title="settings.isMultiAckEnabled"
                    value="true"
                  />
                  <hr
                    class="v-divider theme--light"
                  />
                  <field-fast-ack-output-stub
                    value="[object Object]"
                  />
                </div>
              </transition-stub>
            </div>
            <hr
              class="v-divider theme--light"
            />
            <field-switcher-stub
              title="settings.isSnoozeNoteRequired"
              value="true"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-enabled-limit-stub
              label="settings.linksCategoriesLimit"
              title="settings.linksCategoriesAsList"
              value="[object Object]"
            />
            <hr
              class="v-divider theme--light"
            />
            <export-csv-form-stub
              datetimeformat="true"
              form="[object Object]"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-switcher-stub
              title="settings.stickyHeader"
              value="true"
            />
          </div>
        </div>
      </transition-stub>
    </div>
    <hr
      class="v-divider theme--light"
    />
  </div>
  <button
    class="primary v-btn theme--light"
    type="button"
  >
    <div
      class="v-btn__content"
    >
      common.save
    </div>
  </button>
</div>
`;

exports[`alarm Renders \`alarm\` widget settings with default props 1`] = `
<div>
  <div
    class="v-list pt-0 theme--light"
    role="list"
  >
    <field-title-stub
      title="common.title"
      value=""
    />
    <hr
      class="v-divider theme--light"
    />
    <field-periodic-refresh-stub
      value="[object Object]"
    />
    <hr
      class="v-divider theme--light"
    />
    <div
      class="v-list__group"
    >
      <div
        class="v-list__group__header"
      >
        <div
          role="listitem"
        >
          <div
            class="v-list__tile theme--light"
          >
            settings.advancedSettings
          </div>
        </div>
        <div
          class="v-list__group__header__append-icon"
        >
          <i
            aria-hidden="true"
            class="v-icon material-icons theme--light"
          >
            keyboard_arrow_down
          </i>
        </div>
      </div>
      <transition-stub
        mode="in-out"
        name="expand-transition"
      >
        <div
          class="v-list__group__items"
          style="display: none;"
        >
          <div
            class="v-list grey lighten-4 px-2 py-0 theme--light"
            role="list"
          >
            <field-default-sort-column-stub
              columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
              columnslabel="settings.columnName"
              value="[object Object]"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-columns-stub
              columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
              label="settings.columnNames"
              withcolorindicator="true"
              withhtml="true"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-columns-stub
              columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
              label="settings.groupColumnNames"
              withcolorindicator="true"
              withhtml="true"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-columns-stub
              columns="[object Object],[object Object]"
              label="settings.trackColumnNames"
              withcolorindicator="true"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-default-elements-per-page-stub
              value="13"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-opened-resolved-filter-stub
              value="true"
            />
            <hr
              class="v-divider theme--light"
            />
            <!---->
            <!---->
            <field-live-reporting-stub
              value="[object Object]"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-info-popup-stub
              columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
              popups=""
            />
            <hr
              class="v-divider theme--light"
            />
            <field-text-editor-stub
              title="settings.moreInfosModal"
              value=""
            />
            <hr
              class="v-divider theme--light"
            />
            <field-grid-range-size-stub
              max="12"
              min="0"
              step="1"
              title="settings.expandGridRangeSize"
              value="0,12"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-switcher-stub
              title="settings.isHtmlEnabledOnTimeLine"
            />
            <hr
              class="v-divider theme--light"
            />
            <div
              class="v-list__group"
            >
              <div
                class="v-list__group__header"
              >
                <div
                  role="listitem"
                >
                  <div
                    class="v-list__tile theme--light"
                  >
                    Ack
                  </div>
                </div>
                <div
                  class="v-list__group__header__append-icon"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                  >
                    keyboard_arrow_down
                  </i>
                </div>
              </div>
              <transition-stub
                mode="in-out"
                name="expand-transition"
              >
                <div
                  class="v-list__group__items"
                  style="display: none;"
                >
                  <div
                    class="v-list grey lighten-4 px-2 py-0 theme--light"
                    role="list"
                  />
                  <field-switcher-stub
                    title="settings.isAckNoteRequired"
                  />
                  <hr
                    class="v-divider theme--light"
                  />
                  <field-switcher-stub
                    title="settings.isMultiAckEnabled"
                  />
                  <hr
                    class="v-divider theme--light"
                  />
                  <field-fast-ack-output-stub
                    value="[object Object]"
                  />
                </div>
              </transition-stub>
            </div>
            <hr
              class="v-divider theme--light"
            />
            <field-switcher-stub
              title="settings.isSnoozeNoteRequired"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-enabled-limit-stub
              label="settings.linksCategoriesLimit"
              title="settings.linksCategoriesAsList"
              value="[object Object]"
            />
            <hr
              class="v-divider theme--light"
            />
            <export-csv-form-stub
              datetimeformat="true"
              form="[object Object]"
            />
            <hr
              class="v-divider theme--light"
            />
            <field-switcher-stub
              title="settings.stickyHeader"
            />
          </div>
        </div>
      </transition-stub>
    </div>
    <hr
      class="v-divider theme--light"
    />
  </div>
  <button
    class="primary v-btn theme--light"
    type="button"
  >
    <div
      class="v-btn__content"
    >
      common.save
    </div>
  </button>
</div>
`;
